# zerobus-sdk-ts

./: .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  NEXT_CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md  issue.md
.github/workflows/: ci.yml  publish.yml
examples/: README.md  basic_json.ts  json.ts  parallel_streams.ts  proto.ts
npm/linux-arm64-gnu/: package.json
npm/linux-x64-gnu/: package.json
npm/win32-x64-msvc/: package.json
schemas/: air_quality.proto
src/: headers_provider.ts  lib.rs
test/: integration.test.ts  unit.test.ts
utils/: descriptor.ts
