[package]
name = "zerobus-sdk-ts"
version = "0.0.1"
authors = ["Databricks"]
edition = "2021"
license-file = "LICENSE"
description = "TypeScript/Node.js bindings for the Databricks Zerobus SDK"
repository = "https://github.com/databricks/zerobus-sdk-ts"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI-RS for Node.js bindings
napi = { version = "2", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "2"

# The Rust SDK we're wrapping (pinned to specific commit for reproducible builds)
databricks-zerobus-ingest-sdk = { git = "https://github.com/databricks/zerobus-sdk-rs", rev = "23a315b0348d640fbb87eb16c9575d48ae5c0686" }

# Async runtime (same as the Rust SDK)
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }

# Protobuf support
prost = "0.13.3"
prost-types = "0.13.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Base64 encoding/decoding
base64 = "0.21"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = true
